--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "tsnd --ignore node_modules src/server.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.6.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "prisma": "^4.6.1",
     "ts-node-dev": "^2.0.0",
