--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "prisma": "^4.6.1",
